--- a/public/app.css
+++ b/public/app.css
@@ -94,6 +94,11 @@ body {
     margin: 100px auto 10px auto;
   }
 }
+@media (max-width: 380px) {
+  .snowflake {
+    zoom: 50%;
+  }
+}
 .snowflake #snowflake_maker {
   position: relative;
   left: 40px;
